yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "3030"
      port: 3030
      targetPort: 3030
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
