yaml/goobox-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: goobox-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /v1
          backend:
            serviceName: nginx
            servicePort: 3030
        - path: /
          backend:
            serviceName: frontend
            servicePort: 80
